feature/popover - WIP - Add live data-visualization for Page Views

--- a/src/server/views/page_view_demo/page_view_demo.html
+++ b/src/server/views/page_view_demo/page_view_demo.html
@@ -9,6 +9,7 @@
         {# Real-time: Active user stream line chart #}
         <div id="chart--real-time-container" class="chart--container chart--visible width--100">
             <real-time></real-time>
+            <active-pages></active-pages>
         </div>
     </div>
 {% endblock %}
