--- a/src/client/page_view_demo/app.scss
+++ b/src/client/page_view_demo/app.scss
@@ -35,7 +35,7 @@
 .chartist-tooltip {
     position: absolute;
     font-size: 12px;
-    color: $primary-dark;
+    color: $text-on-primary;
     background: transparent;
 
     .chartist-tooltip-value {
